src/test/ui/suggestions/missing-lifetime-in-assoc-const-type.rs
trait ZstAssert: Sized {
    const TYPE_NAME: &str = ""; //~ ERROR missing lifetime specifier
}

fn main() {}
